2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelopNUnit.addin.xml: Removed the CommandService class. Everything
	  is done directly with CommandManager. Moved all extension node types to
	  MD.Components.

2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.NUnit.mdp, MonoDevelopNUnit.addin.xml,
	  Services/NUnitService.cs, Gui/UnitTestOptionsDialog.cs,
	  Gui/NUnitAssemblyGroupConfigurationNodeBuilder.cs,
	  Gui/TestResultsPad.cs, Gui/NUnitAssemblyGroupNodeBuilder.cs,
	  Gui/TestAssemblyNodeBuilder.cs, Gui/TestNodeBuilder.cs, Gui/TestPad.cs,
	  Makefile.am: Reorganized the extension point hierarchy. Embedded all
	  add-in manifests as resources.

2007-08-02  Lluis Sanchez Gual <lluis@novell.com> 

	* Services/NUnitService.cs,
	  Gui/NUnitAssemblyGroupConfigurationNodeBuilder.cs,
	  Gui/NUnitAssemblyGroupNodeBuilder.cs, Gui/TestNodeBuilder.cs,
	  Gui/TestPad.cs: Converted DispatchService to a static class.

2007-07-19  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.NUnit.mdp, MonoDevelopNUnit.addin.xml, Gui/nunit.png,
	  Makefile.am: Added icon for the nunit pad.

2007-07-18  Lluis Sanchez Gual <lluis@novell.com> 

	* Services/NUnitService.cs, Services/XmlResultsStore.cs,
	  Services/NUnitAssemblyTestSuite.cs: Use the log service for logging
	  errors.

2007-07-03  Mike Krüger <mkrueger@novell.com> 

	* Gui/TestResultsPad.cs: Changed a bit because of the removal of custom
	  collections in the Ide project.

2007-06-20  Lluis Sanchez Gual <lluis@novell.com> 

	* Services/NUnitService.cs: Track api changes.

2007-05-31  Lluis Sanchez Gual <lluis@novell.com> 

	* Services/NUnitService.cs: If a solution is already open when
	  initializing the nunit service, load the test tree.

2007-05-29  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/TestResultsPad.cs: Fixed some status messages. Make sure the
	  progress label does not grow beyond the available space.

2007-05-29  Lluis Sanchez Gual <lluis@novell.com> 
