@@ -1,3 +1,8 @@
+2007-08-31  Mike Krüger <mkrueger@novell.com> 
+
+	* Gui/UnitTestOptionsDialog.cs, Gui/NUnitOptionsPanel.cs: Changes due to new
+	  property infrastructure.
+
 2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* MonoDevelopNUnit.addin.xml: Removed the CommandService class. Everything
